// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToggleSwitch /> should render 1`] = `
<div
  className="form-check form-switch"
>
  <label
    className="form-check-label"
    htmlFor="toggle-switch"
  >
    <input
      className="form-check-input m-0 undefined"
      id="toggle-switch"
      onClick={[Function]}
      role="switch"
      type="checkbox"
    />
  </label>
</div>
`;

exports[`<ToggleSwitch /> should render label 1`] = `
<div
  className="form-check form-switch"
>
  <label
    className="form-check-label"
    htmlFor="toggle-switch"
  >
    <input
      className="form-check-input m-0 undefined"
      id="toggle-switch"
      onClick={[Function]}
      role="switch"
      type="checkbox"
    />
    this is a label
  </label>
</div>
`;
